# portillia

./: .dockerignore  .env.example  .gitignore  .gitmodules  AGENTS.md  CHANGELOG_OLS.md  Dockerfile  Dockerfile.relay  Makefile  README.md  README.zh-CN.md  config.toml  docker-compose.yml  go.mod  go.sum  nginx.conf.template  portal-tunnel  portal_bridge.h  registry.json
.github/workflows/: cd.yml
benchmark/: benchmark.sh
cmd/demo-app/: handler.go  main.c  main.go
cmd/onion-sim/: main.go
cmd/portal-tunnel/: README.md  http_routes.go  main.c  main.go  proxy.go  relays.go  update.go  update_check.go
cmd/relay-server/: admin.go  frontend.go  main.c  main.go  thumbnail.go
docs/: .gitignore  architecture.md  deployment.md  onion_testing.md  package.json  vite.config.ts
docs/src/: app.css
extensions/vscode/: README.md  package.json
frontend/: Dockerfile  README.md  nginx.conf
go/: bridge.go  go.mod  go.sum  libportal_bridge.h  verify_siwe.go
include/: ttak_stubs.h  wireguard.h  wireguard_proto.h
include/ttak/: ttak.h
libs/go-siwe/: go.mod  portillia_go_siwe.h  (+1 more)
portal/: api_server.go  lease.go  lease_test.go  proxy.go  server.go  server_test.go  thumbnail.go
rust_bridge/: Cargo.toml
rust_bridge/src/: crypto.rs  lib.rs  overlay.rs  utils.rs
scripts/: run_onion_sim.sh
sdk/: api_client.go  expose.go  expose_test.go  http.go  http_test.go  listener.go  mitm.go  mitm_test.go  sdk_test.go
types/: api.go  identity.go  overlay.go  paths.go  relay_state.go  types.go
utils/: api.go  api_test.go  clamp.go  cmd.go  crypto.go  discovery.go  file.go  identity.go  network.go  tls.go  utils.go  wireguard.go
(+175 files in other folders)
