[package]
name = "portillia-bridge-rust"
version = "0.1.0"
edition = "2021"

[lib]
name = "portillia_bridge_rust"
crate-type = ["staticlib"]

[dependencies]
siwe = "0.6.0"
hex = "0.4.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libc = "0.2"
time = { version = "0.3", features = ["parsing", "formatting"] }
